# ExtendedIO

./: .clang-format  CMakeLists.txt  Readme.md
src/include/binaryio/: binary_reader.h  binary_writer.h  types.h
src/include/binaryio/util/: align.h  bit_utils.h  swap.h
src/include/exio/: align.h  binary_reader.h  binary_writer.h  bit_utils.h  magic_utils.h  swap.h  types.h
tests/: CMakeLists.txt
tests/src/: main.cpp
